# Jikken

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
01/: 1-1.cpp  1-2.cpp  1-3.cpp  1-4.cpp  1-5.cpp
02/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp
03/: 3-1.cpp  3-2.cpp  3-3.cpp  3-4.cpp
04/: 4-1.cpp  4-2.cpp  4-3.cpp  4-4.cpp
