cmake_minimum_required(VERSION 3.16)
project(Jikken)

set(CMAKE_CXX_STANDARD 11)

add_executable(1-1 01/1-1.cpp)
add_executable(1-2 01/1-2.cpp)
add_executable(1-3 01/1-3.cpp)
add_executable(1-4 01/1-4.cpp)
add_executable(1-5 01/1-5.cpp)

add_executable(2-1 02/2-1.cpp)
add_executable(2-2 02/2-2.cpp)
add_executable(2-3 02/2-3.cpp)
add_executable(2-4 02/2-4.cpp)
add_executable(2-5 02/2-5.cpp)

add_executable(3-1 03/3-1.cpp)
add_executable(3-2 03/3-2.cpp)
add_executable(3-3 03/3-3.cpp)
add_executable(3-4 03/3-4.cpp)